<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_0"
        style="@style/CalcButton.Number"
        android:contentDescription="@string/calculator_description_btn_zero"
        android:text="@string/calculator_button_zero" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_comma"
        style="@style/CalcButton.Number"
        android:text="@string/calculator_button_decimal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_equals"
        style="@style/CalcButton.Functional"
        android:text="@string/calculator_button_equals"
        android:textColor="@color/black"
        app:backgroundTint="@color/golden_orange" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_1"
        style="@style/CalcButton.Number"
        android:text="@string/calculator_button_one" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_2"
        style="@style/CalcButton.Number"
        android:text="@string/calculator_button_two" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_3"
        style="@style/CalcButton.Number"
        android:text="@string/calculator_button_three" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_plus"
        style="@style/CalcButton.Functional"
        android:text="@string/calculator_button_add" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_4"
        style="@style/CalcButton.Number"
        android:text="@string/calculator_button_four" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_5"
        style="@style/CalcButton.Number"
        android:text="@string/calculator_button_five" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_6"
        style="@style/CalcButton.Number"
        android:text="@string/calculator_button_six" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_minus"
        style="@style/CalcButton.Functional"
        android:text="@string/calculator_button_subtract" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_7"
        style="@style/CalcButton.Number"
        android:text="@string/calculator_button_seven" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_8"
        style="@style/CalcButton.Number"
        android:text="@string/calculator_button_eight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_9"
        style="@style/CalcButton.Number"
        android:text="@string/calculator_button_nine" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_multiply"
        style="@style/CalcButton.Functional"
        android:text="@string/calculator_button_multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ac"
        style="@style/CalcButton.Functional"
        android:text="@string/calculator_button_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_del"
        style="@style/CalcButton.Icon"
        android:contentDescription="@string/calculator_button_delete"
        app:icon="@drawable/ic_delete" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_percent"
        style="@style/CalcButton.Functional"
        android:text="@string/calculator_button_percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_divide"
        style="@style/CalcButton.Functional"
        android:text="@string/calculator_button_divide" />
</merge>